# AI_Fundamentals_Data_Domain

./: README.md  main.py  pyproject.toml  requirments.txt
CH-1_LLMs/: 1_API_Calls.ipynb  2_Embeddings.ipynb
CH-2_RAG/: 1_RAG.ipynb
CH-2_RAG/chroma_db/: chroma.sqlite3
CH-3_Prompt_Engineering/: prompt_call.ipynb
CH-4_Agent/: 1_Tool_Binding.ipynb  2_ReAct_Agent.ipynb  3_Structured_Output.ipynb  4_prompt_templates.ipynb  5.1_RAG_Sementic.ipynb  5.2_RAG_Agent.ipynb  6_Agent_Memory.ipynb
CH-4_Agent/chroma_db/: chroma.sqlite3
CH-4_Agent/chroma_db_semantic/: chroma.sqlite3
chroma_db/: chroma.sqlite3
