[project]
name = "ai-fundamentals-data-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "google-genai>=2.4.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-openai>=1.2.1",
    "openai>=2.37.0",
    "pypdf>=6.11.0",
]
