[project]
name = "ai-fundamentals-data-domain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "arxiv>=4.0.0",
    "chromadb>=1.5.9",
    "dotenv>=0.9.9",
    "google-genai>=2.4.0",
    "langchain>=1.3.1",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-openai>=1.2.1",
    "matplotlib>=3.10.9",
    "mediawikiapi>=1.3",
    "openai>=2.37.0",
    "pandas>=2.3.3",
    "pydentic>=0.0.1.dev3",
    "pypdf>=6.11.0",
    "wikipedia>=1.4.0",
]
